--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rainbow-remodeling",
-  "homepage": "https://nwuerz.github.io/rainbow-remodeling/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
